--- a/ProductManagerTest.Persistance/ProductManagerTest.Persistance.csproj
+++ b/ProductManagerTest.Persistance/ProductManagerTest.Persistance.csproj
@@ -18,4 +18,8 @@
 	  <ProjectReference Include="..\ProductManagerTest.Domain\ProductManagerTest.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
