complete repositories implementation , controllers implementation , handlers implementation (business layer in cqrs) , complete all queries,commands,dtos with their validations , testing actions manually , adding autoMapper , final test.

--- a/ProductManagerTest.Api/appsettings.json
+++ b/ProductManagerTest.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SqlConnectionString": "server=.;database=ProductManagerDb;trusted_connection=true;trustServerCertificate=true"
+    "SqlConnectionString": "server=.;database=ProductManagerDb;trusted_connection=true;trustServerCertificate=true;MultipleActiveResultSets=true;"
   },
   "Jwt": {
     "Secret": "0ieFQe1e/Vt57RCtmwyk4dHT+rXewy0Izq4j+uPBDNQ=",
