--- a/ProductManagerTest.UnitTest/ProductManagerTest.UnitTest.csproj
+++ b/ProductManagerTest.UnitTest/ProductManagerTest.UnitTest.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -10,7 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.13" />
+	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.13" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
     <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.4.2" />
@@ -26,13 +29,13 @@
 
   <ItemGroup>
     <Folder Include="Helpers\" />
-    <Folder Include="Systems\Controllers\" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ProductManagerTest.Domain\ProductManagerTest.Domain.csproj" />
 	<ProjectReference Include="..\ProductManagerTest.Application\ProductManagerTest.Application.csproj" />
 	<ProjectReference Include="..\ProductManagerTest.Persistance\ProductManagerTest.Persistance.csproj" />
+	  <ProjectReference Include="..\ProductManagerTest.Api\ProductManagerTest.Api.csproj" />
   </ItemGroup>
 
 </Project>
